--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "andydune/string-replace": "^1",
         "zendframework/zend-dom": "2.*",
         "andydune/pipeline": "*",
-        "andydune/custom-string-explode": "1.*"
+        "andydune/custom-string-explode": "1.*",
+        "alcaeus/mongo-php-adapter": "^1.1",
+        "doctrine/mongodb-odm": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0.8"
@@ -36,6 +38,11 @@
     "autoload-dev": {
         "psr-4": {
             "AndyDuneTest\\WebTelegram\\": "test/"
+        }
+    },
+    "config": {
+        "platform": {
+            "ext-mongo": "1.6.16"
         }
     }
 }
