--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "doctrine/mongodb-odm": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0.8"
+        "phpunit/phpunit": "^6.0.8",
+        "zendframework/zend-servicemanager" : "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
