--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require": {
         "php": ">=7.1",
+        "voku/portable-utf8": "3.*",
         "guzzlehttp/guzzle": "^6.3",
         "andydune/datetime": "2.*",
         "andydune/mongo-odm": "1.*",
